--- a/templates/traefik/1/rancher-compose.yml
+++ b/templates/traefik/1/rancher-compose.yml
@@ -1,6 +1,6 @@
 .catalog:
   name: traefik
-  version: v1.0.0-rc3-rancher1
+  version: v1.0.0-rancher1
   description: |
     (Experimental) Traefik load balancer.
   minimum_rancher_version: v0.59.0
@@ -21,7 +21,7 @@
       type: "int"
     - variable: "https_port"
       description: "Traefik https public port to listen."
-      label: "Http port:"
+      label: "Https port:"
       required: true
       default: 8443
       type: "int"
