--- a/kubernetes-templates/zookeeper/0/zk-rc.yml
+++ b/kubernetes-templates/zookeeper/0/zk-rc.yml
@@ -1,21 +1,18 @@
 apiVersion: v1
 kind: ReplicationController
 metadata: 
-  name: "zookeeper"
+  name: $${stack_name}
   namespace: "default"
   labels:
-    provider: "zookeeper"
-    name: "zookeeper"
+    name: $${stack_name}
 spec:
-  replicas: 2
+  replicas: ${zk_scale}
   selector:
-    provider: "zookeeper"
-    name: "zookeeper"
+    name: $${stack_name}
   template:
     metadata: 
       labels:
-        provider: "zookeeper"
-        name: "zookeeper"
+        name: $${stack_name}
     spec:
       containers:
         - name: "zk-conf"
