--- a/kubernetes-templates/zookeeper/0/zk-service.yml
+++ b/kubernetes-templates/zookeeper/0/zk-service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "zookeeper"
+  name: $${stack_name}
   labels:
-    name: "zookeeper"
+    name: $${stack_name}
 spec:
   ports:
   - port: 2181
@@ -19,4 +19,4 @@ spec:
     name: "zk-lead"
     protocol: "TCP"
   selector:
-    name: "zookeeper"
+    name: $${stack_name}
