Added zookeeper package on k8s

--- a/kubernetes-templates/zookeeper/0/zk-service.yml
+++ b/kubernetes-templates/zookeeper/0/zk-service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: $${stack_name}
+  name: ${stack_name}
   labels:
-    name: $${stack_name}
+    name: ${stack_name}
 spec:
   ports:
   - port: 2181
