--- a/kubernetes-templates/zookeeper/0/zk-rc.yml
+++ b/kubernetes-templates/zookeeper/0/zk-rc.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: ReplicationController
 metadata: 
-  name: ${stack_name}
+  name: "${stack_name}"
   namespace: "default"
   labels:
-    name: ${stack_name}
+    name: "${stack_name}"
 spec:
-  replicas: ${zk_scale}
+  replicas: "${zk_scale}"
   selector:
-    name: ${stack_name}
+    name: "${stack_name}"
   template:
     metadata: 
       labels:
