--- a/kubernetes-templates/zookeeper/0/rancher-compose.yml
+++ b/kubernetes-templates/zookeeper/0/rancher-compose.yml
@@ -7,6 +7,12 @@
   maintainer: "Raul Sanchez <rawmind@gmail.com>"
   uuid: zk-0
   questions:
+      - variable: "zk_name"
+      description: "Name of zk rc and service."
+      label: "Zk name:"
+      required: true
+      default: "zookeeper"
+      type: "string"
     - variable: "zk_scale"
       description: "Number of zk nodes. Note: Recommended an odd number"
       label: "Zk Nodes:"
