--- a/kubernetes-templates/zookeeper/0/zk-service.yml
+++ b/kubernetes-templates/zookeeper/0/zk-service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "${stack_name}"
+  name: "${zk_name}"
   labels:
-    name: "${stack_name}"
+    name: "${zk_name}"
 spec:
   ports:
   - port: 2181
@@ -19,4 +19,4 @@ spec:
     name: "zk-lead"
     protocol: "TCP"
   selector:
-    name: $${stack_name}
+    name: "${zk_name}"
