Added zookeeper package on k8s

--- a/kubernetes-templates/zookeeper/0/zk-rc.yml
+++ b/kubernetes-templates/zookeeper/0/zk-rc.yml
@@ -20,6 +20,7 @@ spec:
           volumeMounts:
             - mountPath: "/opt/tools"
               name: "zk-conf"
+              copyData: true
           ports: 
           imagePullPolicy: "IfNotPresent"
         - name: "zk-service"
