Added zookeeper package on k8s

--- a/kubernetes-templates/zookeeper/0/zk-service.yml
+++ b/kubernetes-templates/zookeeper/0/zk-service.yml
@@ -16,7 +16,7 @@ spec:
     protocol: "TCP"
   - port: 3888
     targetPort: 3888
-    name: "zk-lead"
+    name: "zk-leader"
     protocol: "TCP"
   selector:
     name: "${zk_name}"
