--- a/kubernetes-templates/zookeeper/0/rancher-compose.yml
+++ b/kubernetes-templates/zookeeper/0/rancher-compose.yml
@@ -13,6 +13,12 @@
       required: true
       default: "zookeeper"
       type: "string"
+    - variable: "zk_namespace"
+      description: "Name of zookeeper namespace."
+      label: "Zk name:"
+      required: true
+      default: "default"
+      type: "string"
     - variable: "zk_scale"
       description: "Number of zk nodes. Note: Recommended an odd number"
       label: "Zk Nodes:"
@@ -54,12 +60,6 @@
       label: "Zk tick time (ms):"
       required: true
       default: 5
-      type: "int"
-    - variable: "zk_interval"
-      description: "Interval to poll/apply configuration changes. 0 to disable, reconfiguration will be done when you restart zk nodes"
-      label: "Zk Interval (s):"
-      required: true
-      default: 60
       type: "int"
 zk:
   scale: ${zk_scale}
