--- a/templates/traefik/1/docker-compose.yml
+++ b/templates/traefik/1/docker-compose.yml
@@ -12,7 +12,7 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.0.0
+  image: rawmind/alpine-traefik:1.0.1
   environment:
   - CONF_INTERVAL=${refresh_interval}
   volumes_from:
@@ -21,7 +21,7 @@ traefik-conf:
   log_driver: ''
   labels:
     io.rancher.scheduler.global: 'true'
-    io.rancher.scheduler.affinity:host_label: traefik_lb=true
+    io.rancher.scheduler.affinity:host_label: ${host_label}
     io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
     io.rancher.container.start_once: 'true'
   tty: true
