--- a/kubernetes-templates/zookeeper/config.yml
+++ b/kubernetes-templates/zookeeper/config.yml
@@ -1,7 +1,7 @@
 name: Apache Zookeeper
 description: |
   (Experimental) Zookeeper cluster
-version: 3.4.8-rancher1
+version: 3.4.8-k8s1
 category: Clustering
 maintainer: "Raul Sanchez <rawmind@gmail.com>"
 minimum_rancher_version: v0.59.0
