--- a/kubernetes-templates/zookeeper/0/zk-service.yml
+++ b/kubernetes-templates/zookeeper/0/zk-service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "${zk_name}"
+  namespace: "${zk_namespace}"
   labels:
     name: "${zk_name}"
 spec:
