--- a/templates/traefik/1/docker-compose.yml
+++ b/templates/traefik/1/docker-compose.yml
@@ -12,7 +12,7 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.0.1-2
+  image: rawmind/alpine-traefik:1.0.1-3
   environment:
   - CONF_INTERVAL=${refresh_interval}
   - TRAEFIK_HTTPS_ENABLE=${https_enable}
@@ -27,6 +27,6 @@ traefik-conf:
     io.rancher.container.start_once: 'true'
   tty: true
   log_opt: {}
-  image: rawmind/rancher-traefik:0.3.4
+  image: rawmind/rancher-traefik:0.3.4-1
   net: none
 
