--- a/kubernetes-templates/zookeeper/0/rancher-compose.yml
+++ b/kubernetes-templates/zookeeper/0/rancher-compose.yml
@@ -61,6 +61,12 @@
       required: true
       default: 2000
       type: "int"
+    - variable: "zk_test"
+      description: "Test"
+      label: "Test:"
+      required: false
+      default: 
+      type: "service"
 zk:
   scale: ${zk_scale}
   retain_ip: true
