--- a/kubernetes-templates/zookeeper/config.yml
+++ b/kubernetes-templates/zookeeper/config.yml
@@ -4,5 +4,4 @@ description: |
 version: 3.4.8-k8s1
 category: Clustering
 maintainer: "Raul Sanchez <rawmind@gmail.com>"
-minimum_rancher_version: v0.59.0
-license: 
+projectURL: https://github.com/rawmind0/alpine-zk
