--- a/templates/gocd-server/config.yml
+++ b/templates/gocd-server/config.yml
@@ -6,3 +6,4 @@ category: Continuous Integration
 maintainer: "Raul Sanchez <rawmind@gmail.com>"
 minimum_rancher_version: v0.59.0
 license: 
+projectURL: https://github.com/rawmind0/rancher-goserver
