--- a/kubernetes-templates/kafka/0/zk-rc.yml
+++ b/kubernetes-templates/kafka/0/zk-rc.yml
@@ -41,13 +41,22 @@ spec:
         - name: "broker-service"
           image: "rawmind/alpine-kafka:0.10.0.0-4"
           env:
-            - JVMFLAGS=-Xmx${kafka_mem}m -Xms${kafka_mem}m
-            - CONFD_INTERVAL=${kafka_interval}
-            - KAFKA_ZK_SERVICE=${zk_link}
-            - KAFKA_LOG_DIRS=${kafka_log_dir}
-            - KAFKA_LOG_RETENTION_HOURS=${kafka_log_retention}
-            - KAFKA_NUM_PARTITIONS=${kafka_num_partitions}
-            - ADVERTISE_PUB_IP=${kafka_pub_ip}
+            - name: JVMFLAGS
+              value: "-Xmx${kafka_mem}m -Xms${kafka_mem}m"
+            - name: CONFD_INTERVAL
+              value: "${kafka_interval}"
+            - name: KAFKA_ZK_SERVICE
+              value: "${zk_link}"
+            - name: KAFKA_LOG_DIRS
+              value: "${kafka_log_dir}"
+            - name: KAFKA_LOG_RETENTION_HOURS
+              value: "${kafka_log_retention}"
+            - name: KAFKA_NUM_PARTITIONS
+              value: "${kafka_num_partitions}"
+            - name: ADVERTISE_PUB_IP
+              value: "${kafka_pub_ip}"
+            - name: POD_NAMESPACE
+              value: "${zk_namespace}"
           volumeMounts:
             - mountPath: "${zk_data_dir}"
               name: "broker-data"
