Added kafka packages for kubernetes

--- a/kubernetes-templates/kafka/0/zk-rc.yml
+++ b/kubernetes-templates/kafka/0/zk-rc.yml
@@ -54,7 +54,7 @@ spec:
             - name: KAFKA_NUM_PARTITIONS
               value: "${kafka_num_partitions}"
             - name: ADVERTISE_PUB_IP
-              value: false
+              value: "false"
             - name: POD_NAMESPACE
               value: "${zk_namespace}"
           volumeMounts:
