--- a/kubernetes-templates/kafka/0/zk-rc.yml
+++ b/kubernetes-templates/kafka/0/zk-rc.yml
@@ -58,7 +58,7 @@ spec:
             - name: POD_NAMESPACE
               value: "${zk_namespace}"
           volumeMounts:
-            - mountPath: "${zk_data_dir}"
+            - mountPath: "${kafka_log_dir}"
               name: "broker-data"
             - mountPath: "/opt/tools"
               name: "broker-conf"
