Added kafka packages for kubernetes

--- a/kubernetes-templates/kafka/0/rancher-compose.yml
+++ b/kubernetes-templates/kafka/0/rancher-compose.yml
@@ -55,6 +55,12 @@
       required: true
       default: 60 
       type: "int"
+    - variable: "kafka_pub_ip"
+      description: "Advertise local and host public ip" 
+      label: "Broker public ip:"
+      required: false
+      default: false 
+      type: "boolean"
     - variable: "zk_link"
       description: |
         Choose the Zookeeper service to use. 
