--- a/kubernetes-templates/kafka/0/rancher-compose.yml
+++ b/kubernetes-templates/kafka/0/rancher-compose.yml
@@ -57,9 +57,13 @@
       type: "int"
     - variable: "kafka_pub_ip"
       description: "Advertise local and host public ip" 
-      label: "Broker public ip:"
-      required: false
-      default: "false" 
+      label: "Advertise public ip:"
+      default: false
+      required: true
+      type: enum
+      options:
+        - false
+        - true
       type: "boolean"
     - variable: "zk_link"
       description: |
