Updated kafka packages

--- a/kubernetes-templates/kafka/0/rancher-compose.yml
+++ b/kubernetes-templates/kafka/0/rancher-compose.yml
@@ -49,6 +49,16 @@
       required: true
       default: "1"
       type: "int"
+    - variable: "kafka_delete_topics"
+      label: "Kafka delete topics:"
+      description: |
+        Enable delete topics in kafka.
+      default: false
+      required: true
+      type: enum
+      options:
+        - false
+        - true
     - variable: "kafka_interval"
       description: "Interval to poll/apply configuration changes. 0 to disable" 
       label: "Broker Interval (s):"
@@ -57,13 +67,10 @@
       type: "int"
     - variable: "kafka_pub_ip"
       description: "Advertise local and host public ip" 
-      label: "Advertise public ip:"
-      default: false
-      required: true
-      type: enum
-      options:
-        - false
-        - true
+      label: "Broker public ip:"
+      required: false
+      default: false 
+      type: "boolean"
     - variable: "zk_link"
       description: |
         Choose the Zookeeper service to use. 
