--- a/templates/traefik/2/docker-compose.yml
+++ b/templates/traefik/2/docker-compose.yml
@@ -1,8 +1,8 @@
 traefik:
   ports:
   - ${admin_port}:8000/tcp
-  - ${http_port}/tcp
-  - ${https_port}/tcp
+  - ${http_port}:${http_port}/tcp
+  - ${https_port}:${https_port}/tcp
   log_driver: ''
   labels:
     io.rancher.scheduler.global: 'true'
