--- a/templates/etcd/0/docker-compose.yml
+++ b/templates/etcd/0/docker-compose.yml
@@ -18,6 +18,8 @@ etcd-conf:
     io.rancher.container.hostname_override: container_name
     io.rancher.container.start_once: true
   image: rawmind/rancher-etcd:2.3.7-3
+  volumes:
+    - /opt/tools
 etcd-volume:
   net: none
   labels:
