--- a/kubernetes-templates/kafka/0/zk-rc.yml
+++ b/kubernetes-templates/kafka/0/zk-rc.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: "broker-conf"
-          image: "rawmind/k8s-kafka:0.10.0.0-3"
+          image: "rawmind/k8s-kafka:0.10.0.0-4"
           volumeMounts:
             - mountPath: "/opt/tools"
               name: "broker-conf"
@@ -58,7 +58,7 @@ spec:
             - name: ADVERTISE_PUB_IP
               value: "${kafka_pub_ip}"
             - name: POD_NAMESPACE
-              value: "${zk_namespace}"
+              value: "${kafka_namespace}"
           volumeMounts:
             - mountPath: "${kafka_log_dir}"
               name: "broker-data"
