--- a/templates/skydns/0/rancher-compose.yml
+++ b/templates/skydns/0/rancher-compose.yml
@@ -3,7 +3,7 @@
   version: 2.5.3-rancher1
   description: |
     (Experimental) Skydns service.
-  minimum_rancher_version: v1.0.0
+  minimum_rancher_version: v1.11.0
   maintainer: "Raul Sanchez <rawmind@gmail.com>"
   uuid: skydns-0
   questions:
@@ -17,10 +17,10 @@
       description: "Etcd url to connect to"
       label: "Etcd url:"
       required: true
-      default: "http://etcd:2379"
+      default: "http://etcd.etcd:2379"
       type: "string"
     - variable: "skydns_addr"
-      description: "Skydns address to bind."
+      description: "Skydns address to bind"
       label: "Skydns bind:"
       required: true
       default: "0.0.0.0:53" 
@@ -31,11 +31,23 @@
       required: true
       default: "dev.local"
       type: "string"
-    - variable: "skydns_nameservers"
-      description: "Skydns nameservers forwarders."
-      label: "Skydns nameservers:"
+    - variable: "skydns_no_rec"
+      label: "Disable skydns forward:"
+      description: |
+        Disable skydns forward recursion
+      default: true
       required: true
-      default: "8.8.8.8:53,8.8.4.4:53"
+      type: enum
+      options:
+        - false
+        - true
+    - variable: "skydns_nameservers"
+      description: |
+        Skydns nameservers forwarders. <host>:<port>,<host>:<port>...
+        Needed if "Disable skydns forward: false"
+      label: "Skydns nameservers:"
+      required: false
+      default: ""
       type: "string"
     - variable: "skydns_path_prefix"
       description: "Skydns path prefix"
@@ -47,8 +59,8 @@
       description: "skydns_ndots"
       label: "skydns_ndots:"
       required: true
-      default: 2
-      type: "string"
+      default: 1
+      type: "int"
 skydns:
   scale: ${skydns_scale}
   retain_ip: true
