--- a/templates/resolver/0/docker-compose.yml
+++ b/templates/resolver/0/docker-compose.yml
@@ -24,6 +24,6 @@ resolver-conf:
     io.rancher.scheduler.affinity:container_label_soft_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
     io.rancher.container.hostname_override: container_name
     io.rancher.container.start_once: true
-  image: rawmind/rancher-go-dnsmasq:1.0.6
+  image: rawmind/rancher-go-dnsmasq:1.0.6-1
   volumes:
     - /opt/tools
