--- a/templates/cloud9/0/docker-compose.yml
+++ b/templates/cloud9/0/docker-compose.yml
@@ -1,4 +1,4 @@
-cloud9:
+cloud9-sdk:
   command: "--listen 0.0.0.0 --port ${cloud9_port} -w /workspace --collab --auth ${cloud9_user}:${cloud9_pass}"
   image: "damnhandy/cloud9-sdk"
   restart: "always"
