added cloud9 package

--- a/templates/cloud9/0/docker-compose.yml
+++ b/templates/cloud9/0/docker-compose.yml
@@ -5,3 +5,7 @@ cloud9-sdk:
   volumes:
     - "/var/run/docker.sock:/var/run/docker.sock"
     - "/usr/local/bin/docker:/bin/docker"
+  labels:
+    traefik.domain: ml.innotechapp.com
+    traefik.port: ${cloud9_port}
+    traefik.enable: stack
