--- a/templates/cloud9/0/docker-compose.yml
+++ b/templates/cloud9/0/docker-compose.yml
@@ -1,6 +1,6 @@
 cloud9-sdk:
   command: "--listen 0.0.0.0 --port ${cloud9_port} -w /workspace --collab --auth ${cloud9_user}:${cloud9_pass}"
-  image: "rawmind/cloud9-sdk:test-2"
+  image: "rawmind/cloud9-sdk:0.3.0-1"
   restart: "always"
   volumes:
     - "/var/run/docker.sock:/var/run/docker.sock"
