added cloud9 package

--- a/templates/cloud9/config.yml
+++ b/templates/cloud9/config.yml
@@ -5,4 +5,4 @@ version: 3.0-rancher1
 category: Agile
 maintainer: "Raul Sanchez <rawmind@gmail.com>"
 license: 
-projectURL: https://github.com/damnhandy/cloud9-sdk
+projectURL: https://github.com/rawmind0/cloud9-sdk
