--- a/templates/traefik/3/docker-compose.yml
+++ b/templates/traefik/3/docker-compose.yml
@@ -12,7 +12,7 @@ traefik:
     io.rancher.container.hostname_override: container_name
   tty: true
   log_opt: {}
-  image: rawmind/alpine-traefik:1.0.3
+  image: rawmind/alpine-traefik:1.0.3-1
   environment:
   - CONF_INTERVAL=${refresh_interval}
   - TRAEFIK_HTTP_PORT=${http_port}
